fixed the responsive issue on mobile screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -201,7 +201,7 @@ header ul > li {
 .footer-box li {
   /* list-style-type: none; */
   display: flex;
-  padding: 0 0.8rem;
+  padding: 0.8rem 0.8rem;
   font-family: Helvetica, sans-serif;
   color: grey;
   font-size: 14px;
@@ -227,13 +227,12 @@ header ul > li {
     flex-direction: column;
     justify-content: center;
   }
-  .footer-box-end {
-    /* border-top:1px solid #ddd; */
-  }
   .footer > :last-child > :first-child {
     width: 80%;
     justify-self: flex-end;
     margin: 0 auto;
+    flex-wrap: wrap;
+
   }
   .footer > :last-child > :last-child {
     margin: 0 auto;
